# snaemk

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  readme.md
include/snaemk/: kmeans.hpp  pkmeans.hpp
test/: CMakeLists.txt  distance-fns.hpp  test-kmeans.cpp
